moved files to src folder and cleaned up

--- a/ui/report.html
+++ b/ui/report.html
@@ -1,8 +1,8 @@
 <p>*********************************** <br />
 Report:<br />
 ***********************************</p>
-<p>Installed extensions: <b>{{installed}}</b></p>
-<p>Already installed (skipped): <b>{{skippedInstalled}}</b></p>
-<p>Failed: <b>{{failed}}</b></p>
-<p>Unknown extensions: <b>{{notFound}}</b></p>
+<p>Installed extensions ({{installedNum}}): <b>{{installed}}</b></p>
+<p>Already installed (skipped) ({{skippedNum}}): <b>{{skippedInstalled}}</b></p>
+<p>Failed ({{failedNum}}): <b>{{failed}}</b></p>
+<p>Unknown extensions ({{notFoundNum}}): <b>{{notFound}}</b></p>
 <br />
