--- a/ui/startPage.html
+++ b/ui/startPage.html
@@ -1,10 +1,14 @@
 <div id="extensions-install-from-file" class="extensions-install-from-file-dialog bottom-panel top-resizer clearfix">
 	<div class="toolbar simple-toolbar-layout">
-<!--		<div class="title">Install extensions from file or export installed extensions to file: </div>-->
+		<div class="title">Extensions Bulk Installer </div>
 		<div id="btn-group">
-			<button title="Import and install extensions from file" id="install-btn" class="btn small install-from-file"><i class="octicon octicon-plus"></i>
+			<button title="Import and install extensions from file" id="install-btn" class="btn small install-from-file">
+<!--				<i class="octicon octicon-plus"></i>-->
+				Install from file
 			</button>
-			<button title="Export installed extensions to file" id="export-btn" class="btn small export-to-file"><i class="octicon octicon-file-symlink-file"></i>
+			<button title="Export installed extensions to file" id="export-btn" class="btn small export-to-file">
+<!--				<i class="octicon octicon-file-symlink-file"></i>-->
+				Export to file
 			</button>
 		</div>
 
@@ -12,16 +16,17 @@
 	</div>
 
 	<div id="install-export-extensions">
-<!--		<div id="install-extensions" class="">-->
-<!--			<h4>Install extensions from selected file</h4>-->
-<!--			<button id="install-btn">Select file and install</button>-->
-<!--		</div>-->
-<!--		<div id="export-extensions" class="">-->
-<!--			<h4>Export currently installed extensions to file</h4>-->
-<!--			<button id="export-btn">Export to file</button>-->
-<!--		</div>-->
+		<!--		<div id="install-extensions" class="">-->
+		<!--			<h4>Install extensions from selected file</h4>-->
+		<!--			<button id="install-btn">Select file and install</button>-->
+		<!--		</div>-->
+		<!--		<div id="export-extensions" class="">-->
+		<!--			<h4>Export currently installed extensions to file</h4>-->
+		<!--			<button id="export-btn">Export to file</button>-->
+		<!--		</div>-->
 		<div id="loaded-extensions">
 			<h4>Loaded extensions</h4>
+			<button id="clear-table">Clear</button>
 			<hr>
 			<table id="install-table" class="bottom-panel-table table table-striped table-condensed row-highlight">
 				<thead>
