--- a/icons/ind.html
+++ b/icons/ind.html
@@ -16,6 +16,8 @@
 
 <body>
 <div class="svg-ic_import_export_24px svg-ic_import_export_24px-dims"></div>
+
+<svg width="24" height="24" viewBox="0 0 24 24" id="ic_import_export_24px" y="408"><path d="M9 3L5 6.99h3V14h2V6.99h3L9 3zm7 14.01V10h-2v7.01h-3L15 21l4-3.99h-3z"/></svg>
 	<script src=""></script>
 </body>
 
