--- a/ui/startPage.html
+++ b/ui/startPage.html
@@ -16,14 +16,6 @@
 	</div>
 
 	<div id="install-export-extensions">
-		<!--		<div id="install-extensions" class="">-->
-		<!--			<h4>Install extensions from selected file</h4>-->
-		<!--			<button id="install-btn">Select file and install</button>-->
-		<!--		</div>-->
-		<!--		<div id="export-extensions" class="">-->
-		<!--			<h4>Export currently installed extensions to file</h4>-->
-		<!--			<button id="export-btn">Export to file</button>-->
-		<!--		</div>-->
 		<div id="loaded-extensions">
 			<h4>Loaded extensions</h4>
 			<button id="clear-table">Clear</button>
@@ -34,6 +26,7 @@
 					<th>Extension Title</th>
 					<th>Status</th>
 				</thead>
+				<tbody id="table-body"></tbody>
 			</table>
 		</div>
 	</div>
@@ -43,6 +36,5 @@
 		<button id="clear-board">Clear</button>
 		<hr>
 		<div id="status-messages"></div>
-		<!--		<div id="export-file-content" class="spinner small spin">Status messages should go here!</div>-->
 	</div>
 </div>
