--- a/ui/startPage.html
+++ b/ui/startPage.html
@@ -42,12 +42,11 @@
             <div>
                 <p>
                     <b>0.2.0</b>
-                    - Removed toolbar icon and added File Menu item instead
-                    Thanks to <a href="https://github.com/N0bl3">N0bl3</a> and <a href="https://github.com/andrienko">andrienko</a>
+                    <p>- Removed toolbar icon and added File Menu item instead. Thanks to <a href="https://github.com/N0bl3">N0bl3</a> and <a href="https://github.com/andrienko">andrienko</a></p>
                 </p>
                 <p>
                     <b>0.1.2</b>
-                    - fixed bug related to ExtensionManagerViewModel.InstalledViewModel
+                    <p>- fixed bug related to ExtensionManagerViewModel.InstalledViewModel</p>
                 </p>
 
             </div>
